# cannula

./: .gitignore  .prettierrc  .readthedocs.yaml  LICENSE  Makefile  README.md  codecov.yml  environment.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yaml  config.yml
cannula/: __init__.py  api.py  cli.py  codegen.py  context.py  directives.py  errors.py  format.py  helpers.py  mocks.py  schema.py  schema_processor.py  tracking.py  types.py  utils.py
cannula/codegen/: __init__.py  base.py  codegen.py  generate_context.py  generate_operations.py  generate_sql.py  generate_types.py  json_selection.py  macro_registry.py  parse.py  parse_args.py  parse_type.py  parse_variables.py  schema_analyzer.py  types.py
cannula/codegen/templates/_macros/: form_checkbox.html  form_container.html  form_date.html  form_fieldset.html  form_number.html  form_select.html  form_text_input.html  form_textarea.html  result_container.html  result_list.html  result_list_item.html  result_object.html  result_object_item.html
cannula/contrib/: asgi.py  config.py  orm.py  otel.py  star.py
cannula/datasource/: __init__.py  base.py  forms.py  http.py  orm.py  rest.py
cannula/handlers/: app_router.py  application.py  asgi.py  const.py  forms.py  operations.py  templating.py
cannula/middleware/: __init__.py  debug.py  mocks.py  profile.py
cannula/scalars/: __init__.py  _base.py  date.py  util.py
cannula/statics/: Makefile
cannula/statics/css/: base.css  base.min.css  base.min.css.map
cannula/statics/js/: components.js  drawer.js  lucide-icon.js  theme-toggle.js  toast.js
docs/: conf.py  context.rst  datasources.rst  index.rst  middleware.rst  schema.rst
docs/_static/: custom.css
docs/ref/: codegen.rst  contrib.rst  datasources.rst  design.rst  index.rst  middleware.rst  resolvers.rst  scalars.rst  schema.rst  testing.rst
docs/ref/cli/: codegen-command.rst  index.rst
docs/tutorial/: index.rst  part0.rst  part1.rst  part2.rst  part3.rst  part4.rst  part5.rst
examples/: application.py  extends.py  forms.py  hello.py  http_datasource.py  mocks.py  profiler.py
examples/cloud/: Makefile  README.md  api.py  app.py  docker-compose.yaml  mock_server.py  requirements.txt  session.py
examples/cloud/queries/: dashboard.graphql  simple.graphql
examples/cloud/resolvers/: base.py
examples/cloud/resolvers/application/: __init__.py  actions.py  navigation.py  resolver.py  status.py
examples/cloud/resolvers/application/graphql/: actions.graphql
examples/cloud/resolvers/application/schema/: actions.graphql  status.graphql
examples/cloud/resolvers/compute/: __init__.py  flavors.py  images.py  resolver.py  servers.py
examples/cloud/resolvers/compute/graphql/: 001_compute_server.graphql  002_compute_flavor.graphql  003_compute_image.graphql
examples/cloud/resolvers/dashboard/: __init__.py  resolver.py
examples/cloud/resolvers/dashboard/graphql/: quota.graphql  (+1 more)
examples/cloud/resolvers/identity/: __init__.py  resolver.py
examples/cloud/resolvers/navigation/: __init__.py  resolver.py
examples/cloud/resolvers/network/: __init__.py  app.py  forms.py
examples/cloud/resolvers/volume/: __init__.py
examples/cloud/spec/: cypress.json  package-lock.json  package.json
examples/cloud/static/css/: main.css
examples/cloud/static/js/: app-navigation.js  openstack-app.js  server-list.js  simple-app.js  style.css  style.js
examples/cloud/templates/: index.html  simple.html
examples/cloud/views/: index.html  index.tpl  login.tpl
examples/codegen/: myschema.graphql  pyproject.toml
examples/codegen/app/: context.py  models.py  sql.py  types.py
examples/datasources/: api.py  database.py  http.py  orm.py  schema.graphql
examples/extension/: README.md  _generated.py  astme.py  main.py  pyproject.toml
examples/extension/gql/: context.py  sql.py  types.py
examples/extension/schema/: base.graphql  books.graphql  movies.graphql
examples/scalars/: _generated.py  main.py  pyproject.toml  schema.graphql
examples/scalars/gql/: types.py
examples/tutorial/: Dockerfile  Makefile  requirements.txt  setup.cfg
examples/tutorial/dashboard/: __main__.py  main.py
examples/tutorial/dashboard/core/: app.py  config.py  database.py  repository.py  seed_data.py  session.py
examples/tutorial/dashboard/part1/: routes.py  schema.graphql
examples/tutorial/dashboard/part2/: graph.py  routes.py
examples/tutorial/dashboard/part3/: _generated.py  context.py  graph.py  models.py  pyproject.toml  routes.py  schema.graphql  seed_part3.py
examples/tutorial/dashboard/part4/: _generated.py  context.py  graph.py  models.py  routes.py  schema.graphql
examples/tutorial/dashboard/part5/: _generated.py  context.py  graph.py  models.py  pyproject.toml  repository.py  routes.py  schema.graphql  seed_part5.py
examples/tutorial/dashboard/static/: .gitkeep  main.py  pyscript.toml
examples/tutorial/dashboard/templates/: base.html  index.html
examples/tutorial/part0/: Makefile  pytest.ini  requirements.txt
examples/tutorial/part0/dashboard/: __main__.py  app.py  config.py  database.py
examples/tutorial/part0/tests/: test_app.py  test_database.py
examples/tutorial/tests/: conftest.py  test_core.py  test_part1.py  test_part2.py  test_part3.py  test_part4.py  test_part5.py
performance/: Makefile  test_performance.py
tests/: conftest.py  test_api.py  test_cli.py  test_codegen.py  test_context.py  test_examples.py  test_schema.py  test_schema_processor.py  test_tracking.py  test_unions.py  test_utils.py
tests/codegen/: test_codegen.py  test_generate_context.py  test_generate_mutations.py  test_generate_operations.py  test_generate_sql.py  test_generate_types.py  test_json_selection.py  test_parse_variables.py  test_parsers.py  test_schema_analyzer.py
tests/contrib/: test_asgi.py  test_config.py  test_orm.py  test_otel.py
tests/datasource/: test_http.py  test_orm.py
tests/handlers/: test_asgi_handler.py  test_forms.py  test_operations.py  test_templating.py
tests/middleware/: test_debug.py
tests/scalars/: test_date.py  test_util.py
(+40 files in other folders)
