[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cannula"
dynamic = ["version"]
description = "Async GraphQL Helper Library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Robert Myers", email = "robert@julython.org" },
]
keywords = [
    "graphql",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "graphql-core<=3.2.5",
]

[project.optional-dependencies]
codegen = [
    "autoflake<=2.3.1",
    "black<=24.10.0",
    "tomli<=2.2.1",
    "typing-extensions<=4.12.2",
]
httpx = [
    "httpx",
    "fastapi",
]
test = [
    "black",
    "coverage==7.6.4",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "pycodestyle",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest<9",
    "python-dateutil==2.9.0",
    "Sphinx==8.0.2",
    "sphinx-autodoc-typehints",
    "sphinx-argparse==0.5.2",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.19.0",
    "pydata-sphinx-theme",
    "twine==5.1.1",
    "types-python-dateutil",
    "types-requests",
    "hatch",
]
performance = [
    "pytest<9",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
    "pytest-mock",
    "fastapi",
    "ariadne",
    "httpx",
]

[project.scripts]
cannula = "cannula.cli:main"

[project.urls]
Homepage = "https://github.com/rmyers/cannula"

[tool.hatch.build.targets.wheel]
only-include = ["cannula"]

[tool.hatch.version]
path = "cannula/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cannula",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "6.0"
addopts = [
    "-vvv",
    "--cov=cannula",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=json:reports/coverage.json",
    "--junit-xml=reports/junit.xml",
    "--ignore=tests/fixtures/examples",
]
testpaths = [
    "tests",
    "integration",
]

[tool.isort]
profile="black"

[tool.flake8]
max_line_length=120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = "True"
