[metadata]
name = cannula
version = attr: cannula.__VERSION__
author= Robert Myers
author_email = robert@julython.org
description = Async GraphQL Helper Library
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = graphql
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  graphql-core-next

[flake8]
max_line_length=120
