[metadata]
name = cannula
version = attr: cannula.__VERSION__
author= Robert Myers
author_email = robert@julython.org
description = Async GraphQL Helper Library
url = https://github.com/rmyers/cannula
long_description = file: README.md
long_description_content_type = text/markdown
keywords = graphql
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
  graphql-core==3.2.3

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
  coverage==7.2.3
  flake8==6.0.0
  mypy==1.2.0
  pytest<8
  pycodestyle
  pytest-asyncio
  pytest-cov
  black
  # Sphinx Documentation
  Sphinx==2.0.1
  # twine PYPI Publish
  twine==4.0.2
  setuptools==65.5.1
  wheel==0.40.0

[flake8]
max_line_length=120

[mypy]
ignore_missing_imports = True
